--- a/mae.css
+++ b/mae.css
@@ -1,36 +1,45 @@
-table {
-	background-color: rgb(220,255,220);
-	border: 1px solid rgb(50,50,50);
+div {
+    display: inline-block;
+	text-align: left;
+    max-width: 400px;
+    min-width: 300px;
 }
-td {
+.content {
+    max-width: 900px;
+	text-align: center;
+	background: rgb(220,255,220);
+	border: 1px solid rgb(50,50,50);
 	padding: 10px;
 }
-h6 {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 9px;
-	font-weight: normal;
-}
-
 .menu {
 	text-align: center;
-	background-color: rgb(220,230,250);
-	border-bottom: 1px solid rgb(50,50,50);
-	font-family: Verdana, Arial, Helvetica, sans-serif;
+	background: rgb(220,230,250);
+	border: 1px solid rgb(50,50,50);
+	border-bottom: none;
+	font-family: Verdana, Arial, sans-serif;
 	font-size: 13px;
 	font-weight: bold;
+	padding: 10px;
 }
 .menu a {
 	color: black;
 	font-weight: normal;
+	padding: 4px;
 }
 .menu a:hover {
 	color: rgb(155,240,255);
-	background-color: rgb(50,50,255);
+	background: rgb(50,50,255);
 }
 
 .box {
 	font-size: 11px;
-	background-color: rgb(255,255,200);
+	background: rgb(255,255,200);
 	border: 1px solid #333333;
 	padding: 5px;
 }
+h5 {
+	font-family: Verdana, Arial, sans-serif;
+	font-size: 9px;
+	font-weight: normal;
+}
+
