--- a/mae.css
+++ b/mae.css
@@ -1,3 +1,4 @@
+body { margin: 0; }
 div {
     display: inline-block;
 	text-align: left;
@@ -9,7 +10,7 @@ div {
 	text-align: center;
 	background: rgb(220,255,220);
 	border: 1px solid rgb(50,50,50);
-	padding: 10px;
+	padding: 8px;
 }
 .menu {
 	text-align: center;
@@ -19,7 +20,7 @@ div {
 	font-family: Verdana, Arial, sans-serif;
 	font-size: 13px;
 	font-weight: bold;
-	padding: 10px;
+	padding: 11px;
 }
 .menu a {
 	color: black;
@@ -29,13 +30,6 @@ div {
 .menu a:hover {
 	color: rgb(155,240,255);
 	background: rgb(50,50,255);
-}
-
-.box {
-	font-size: 11px;
-	background: rgb(255,255,200);
-	border: 1px solid #333333;
-	padding: 5px;
 }
 h5 {
 	font-family: Verdana, Arial, sans-serif;
