--- a/mae.css
+++ b/mae.css
@@ -2,6 +2,7 @@ body { margin: 0; }
 div {
     display: inline-block;
 	text-align: left;
+	vertical-align: top;
     max-width: 400px;
     min-width: 300px;
 }
